src/components/Navbar/Objects/FullMenu.css
.nav-full{
  position: fixed;
  top: 0;
  left: 0;
  width: 300px;
  height: 100vh;
  background-color: black;
  /* z-index: 999; */
  animation: slideRight 1s;
}

@media (max-width:768px) {
  .nav-full {
    width: 100%;
    animation: slideLeftMobile 1s;
  }
}

@keyframes slideLeftMobile {
  from {left:60%}
  to {left:0}
}

@keyframes slideRight {
  from {left:-240px}
  to {left:0}
}

.nav-center {
  align-items: center;
  margin: auto;
  height: auto;
}

.nav-full-line {
  margin: auto;
  margin-top: 120px;
  border-bottom: 1px solid rgba(255, 255 , 255, 0.6);
  height: 1px;
  width: 60%;
}

.nav-tran {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: none;
}

